--- a/app/src/main/res/layout/cardview_item.xml
+++ b/app/src/main/res/layout/cardview_item.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="2dp"
+    android:background="@color/cardview_dark_background"
+    android:layout_margin="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp">
     <RelativeLayout
